# genesearch

./: README.md  demo.py  genesearch-runner.py  pyproject.toml
genesearch/: __main__.py  search.py  summarise.py
